Bug 508288 - In the Ledger, typing a value to find a transaction does the New Transaction form open by itself
Summary: In the Ledger, typing a value to find a transaction does the New Transaction ...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: ux-ui (other bugs)
Version First Reported In: 5.2.1
Platform: Microsoft Windows Other
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-08-15 13:50 UTC by Adilson Urso
Modified: 2025-08-17 14:07 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.2.2
Sentry Crash Report:


Attachments
The New Transaction Form showed and the focus going to the Date (101.60 KB, image/jpeg)
2025-08-15 13:52 UTC, Adilson Urso
Details
clip (1.85 MB, video/mp4)
2025-08-17 11:37 UTC, Adilson Urso
Details
Book File (2.59 KB, application/gzip)
2025-08-17 11:39 UTC, Adilson Urso
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adilson Urso 2025-08-15 13:50:57 UTC
SUMMARY
Sometimes if I type a value in the search box to find a transaction a New Transaction form is showed without a command


STEPS TO REPRODUCE
1. Open a Book
2. Go to Ledger
3. Select a account
4. Type Ctrl + F
5. Set the filter to "Not Marked"
6. Type 1111 or some else in the search box

OBSERVED RESULT
A New Transaction form is opened  by it self

EXPECTED RESULT
Nothing just an empty ledger if no transactions found

SOFTWARE/OS VERSIONS
Windows: 11 
macOS: 
(available in the Info Center app, or by running `kinfo` in a terminal window)
Linux/KDE Plasma: 
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Adilson Urso 2025-08-15 13:52:54 UTC
Created attachment 184103 [details]
The New Transaction Form showed and the focus going to the Date
Comment 2 Adilson Urso 2025-08-16 10:55:10 UTC
I realized that even without pressing CTRL+F, any key I type opens the transaction editor. Is this normal?
Comment 3 Thomas Baumgart 2025-08-16 13:09:25 UTC
Git commit 8314ee040c1b4ec64508a45357366195a9abd1ca by Thomas Baumgart.
Committed on 16/08/2025 at 13:09.
Pushed by tbaumgart into branch 'master'.

Start editing transactions only with specific keys
FIXED-IN: 5.2.2

M  +1    -0    kmymoney/views/ledgerview.cpp
M  +1    -0    kmymoney/views/splitview.cpp

https://invent.kde.org/office/kmymoney/-/commit/8314ee040c1b4ec64508a45357366195a9abd1ca
Comment 4 Thomas Baumgart 2025-08-17 04:47:47 UTC
Git commit 2d17bac7faeb2eb988c98a094e0100429d155797 by Thomas Baumgart.
Committed on 16/08/2025 at 14:06.
Pushed by tbaumgart into branch '5.2'.

Start editing transactions only with specific keys
FIXED-IN: 5.2.2
(cherry picked from commit 8314ee040c1b4ec64508a45357366195a9abd1ca)

M  +1    -0    kmymoney/views/ledgerview.cpp
M  +1    -0    kmymoney/views/splitview.cpp

https://invent.kde.org/office/kmymoney/-/commit/2d17bac7faeb2eb988c98a094e0100429d155797
Comment 5 Adilson Urso 2025-08-17 11:37:07 UTC
The problem with CTRL+F still persists. I made a video to demonstrate this and attached the kmy file. 
To work you have to uncheck "Show header for the previus and current fiscal year" in the Ledger Configure
Comment 6 Adilson Urso 2025-08-17 11:37:53 UTC
Created attachment 184180 [details]
clip
Comment 7 Adilson Urso 2025-08-17 11:39:40 UTC
Created attachment 184181 [details]
Book File
Comment 8 Thomas Baumgart 2025-08-17 13:11:17 UTC
Git commit 6d526f52b178b4c501c720430e10b9111c6751fe by Thomas Baumgart.
Committed on 17/08/2025 at 13:07.
Pushed by tbaumgart into branch 'master'.

Prevent starting the transaction editor during filtering
FIXED-IN: 5.2.2

M  +15   -3    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/6d526f52b178b4c501c720430e10b9111c6751fe
Comment 9 Thomas Baumgart 2025-08-17 14:07:11 UTC
Git commit d9f27ab89c37f84312b96f6e7f4ca73f407e5bae by Thomas Baumgart.
Committed on 17/08/2025 at 13:11.
Pushed by tbaumgart into branch '5.2'.

Prevent starting the transaction editor during filtering
FIXED-IN: 5.2.2
(cherry picked from commit 6d526f52b178b4c501c720430e10b9111c6751fe)

M  +15   -3    kmymoney/views/ledgerview.cpp

https://invent.kde.org/office/kmymoney/-/commit/d9f27ab89c37f84312b96f6e7f4ca73f407e5bae