Start editing transactions only with specific keys

BUG: 508288
FIXED-IN: 5.2.2
(cherry picked from commit 8314ee040c1b4ec64508a45357366195a9abd1ca)